--- a/app/src/main/res/xml/motion_cards_scene.xml
+++ b/app/src/main/res/xml/motion_cards_scene.xml
@@ -141,6 +141,7 @@
 			android:layout_marginBottom="32dp"
 			android:elevation="0dp"
 			
+			android:rotation="0"
 			android:scaleX="0.8"
 			android:scaleY="0.8"
 			
@@ -160,6 +161,7 @@
 			android:layout_marginBottom="32dp"
 			android:elevation="1dp"
 			
+			android:rotation="0"
 			android:alpha="1"
 			
 			app:layout_constraintTop_toTopOf="parent"
@@ -342,6 +344,7 @@
 			android:layout_marginBottom="32dp"
 			android:elevation="0dp"
 			
+			android:rotation="0"
 			android:scaleX="0.8"
 			android:scaleY="0.8"
 			
@@ -360,6 +363,9 @@
 			android:layout_marginEnd="32dp"
 			android:layout_marginBottom="32dp"
 			android:elevation="1dp"
+			
+			android:rotation="0"
+			android:alpha="1"
 			
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
