--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -51,6 +51,8 @@
 			android:scaleX="0.8"
 			android:scaleY="0.8"
 			
+			app:goneIf="@{viewModel.bottomCard == null}"
+			
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +68,8 @@
 			android:layout_marginTop="32dp"
 			android:layout_marginEnd="32dp"
 			android:layout_marginBottom="32dp"
+			
+			app:goneIf="@{viewModel.topCard == null}"
 			
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
@@ -118,7 +122,7 @@
 			android:layout_width="120dp"
 			android:layout_height="120dp"
 			
-			android:visibility="invisible"
+			app:invisibleIf="@{!viewModel.showLoading}"
 			
 			app:layout_constraintVertical_bias="0.6"
 			app:layout_constraintTop_toTopOf="parent"
@@ -137,6 +141,8 @@
 			android:text="@string/fragment_cards_explanation_text"
 			android:textAppearance="?textAppearanceHeadline5"
 			android:visibility="invisible"
+			
+			app:invisibleIf="@{!viewModel.showEmptyIndicator}"
 			
 			app:layout_constraintTop_toBottomOf="@id/loadingView"
 			app:layout_constraintBottom_toBottomOf="parent"
