--- a/app/src/main/res/xml/motion_cards_scene.xml
+++ b/app/src/main/res/xml/motion_cards_scene.xml
@@ -149,7 +149,7 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			
+			app:visibilityMode="ignore"
 			/>
 		
 		<Constraint android:id="@+id/topCard"
@@ -168,7 +168,34 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
+			app:visibilityMode="ignore"
+			/>
+		
+		<Constraint android:id="@+id/loadingView"
+			android:layout_width="120dp"
+			android:layout_height="120dp"
 			
+			app:visibilityMode="ignore"
+			
+			app:layout_constraintVertical_bias="0.6"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toTopOf="@id/tvCardHelperText"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			
+			/>
+		
+		<Constraint android:id="@+id/tvCardHelperText"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:gravity="center"
+			
+			app:visibilityMode="ignore"
+			
+			app:layout_constraintTop_toBottomOf="@id/loadingView"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
 			/>
 		
 	</ConstraintSet>
@@ -234,6 +261,8 @@
 			android:layout_marginTop="20dp"
 			android:layout_marginEnd="50dp"
 			android:layout_marginBottom="80dp"
+			
+			android:rotation="-10"
 			
 			app:layout_constraintWidth_percent="0.7"
 			app:layout_constraintTop_toTopOf="parent"
@@ -313,6 +342,8 @@
 			android:layout_marginEnd="50dp"
 			android:layout_marginBottom="80dp"
 			
+			android:rotation="10"
+			
 			app:layout_constraintWidth_percent="0.7"
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
@@ -347,6 +378,7 @@
 			android:rotation="0"
 			android:scaleX="0.8"
 			android:scaleY="0.8"
+			app:visibilityMode="ignore"
 			
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
@@ -366,12 +398,40 @@
 			
 			android:rotation="0"
 			android:alpha="1"
+			app:visibilityMode="ignore"
 			
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			
+			/>
+		
+		<Constraint android:id="@+id/loadingView"
+			android:layout_width="120dp"
+			android:layout_height="120dp"
+			
+			app:visibilityMode="ignore"
+			
+			app:layout_constraintVertical_bias="0.6"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toTopOf="@id/tvCardHelperText"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			
+			/>
+		
+		<Constraint android:id="@+id/tvCardHelperText"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:gravity="center"
+			
+			app:visibilityMode="ignore"
+			
+			app:layout_constraintTop_toBottomOf="@id/loadingView"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
 			/>
 	
 	</ConstraintSet>
@@ -437,6 +497,8 @@
 			android:layout_marginTop="20dp"
 			android:layout_marginEnd="50dp"
 			android:layout_marginBottom="80dp"
+			
+			android:rotation="-10"
 			
 			app:layout_constraintWidth_percent="0.7"
 			app:layout_constraintTop_toTopOf="parent"
@@ -515,6 +577,8 @@
 			android:layout_marginTop="20dp"
 			android:layout_marginEnd="50dp"
 			android:layout_marginBottom="80dp"
+			
+			android:rotation="10"
 			
 			app:layout_constraintWidth_percent="0.7"
 			app:layout_constraintTop_toTopOf="parent"
